examples/datalog/12_errors/21_insert_into_view.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_insert_view
Knowledge graph 'test_insert_view' created.
Switched to knowledge graph: test_insert_view
> .kg use test_insert_view
Switched to knowledge graph: test_insert_view
> +base[(1), (2), (3)].
Inserted 3 fact(s) into 'base'.
> +derived(X) :- base(X), X > 1.
Rule 'derived' registered.
> +derived[(99)].
Script error: Insert failed: Cannot insert into 'derived': it is a derived relation (view). Use a base relation or drop the rule first with '.rule drop derived'.
